disable intel-gpu-plugin chart

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:VyeCRDzgy23FNtMkxrGZiNRr/ZtRFKD8fjqVvL3On/N/EZfzxYBN9uIkmAqHu/1dGtscWpNevSilCEeEAT2Uo84=,iv:oS5JjyPbOt2NJgzYpKhzIm3VNjesYS+uljzFMEZDKAI=,tag:pUHIUYfMcQl6oVi7v1A+wg==,type:comment]
-#ENC[AES256_GCM,data:BgCBjNRF0Nkrd2p3RHvPb2cFPSzYO0ul9LI6NoHI262mZiD3sYebSKfTTtk=,iv:LYt8gZH8CHO4/8rCv3UYx2hICp28MvGWED8UH7SF4RY=,tag:WakCcfMeYNFD9pSKa16Zug==,type:comment]
-VIP: ENC[AES256_GCM,data:NmsOx5Weeimpko+uWw==,iv:aaGdfBv0Kt8hycxkm1IHWwxj/6FE4PNaHky+Xa4TQDE=,tag:LhyfPEr7m9tAxX0WUYkYXg==,type:str]
-#ENC[AES256_GCM,data:h18RHyViPJoVquxxJkEKDm4I3SDndz8oIQdB,iv:Qmc32QEYtJYO/GQys0VJnEZCIc7Dfj1BVLdDgqz+deg=,tag:E1m8ug9Jw3cidw2NAwI7ow==,type:comment]
-#ENC[AES256_GCM,data:3nr6/y7XqOMOGmjYgUr8jzg1tu7Y9GFDvlKWAoQ6qVaNSJfKG/pThvd/plT0ho9btDrCBBHTIhowUVPAfblQ3wGgi6JYAjwffE/xC5oAivZNjlGmrLIQiHM=,iv:TroDgQAQuQnEvNJ0clqQhx49JqUejf/culg6v8dQNPM=,tag:v/MvI/jWbyw57+aMMnfJyg==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:4aO5pV0iQI+++LiLAEU=,iv:oc8afj4rvJJlXmnKI89PR7lK9XSk1+zSSutkA/9tbl0=,tag:TxsS3Xp1zGc0zENdPFpmFw==,type:str]
-#ENC[AES256_GCM,data:tnGhYUxJLwIheYShbKlI+c7P6kmSyvtWvoops881/JBpZw==,iv:uz94px24hIPEPvsNjic8YXlr9E1NaAQDPFAp7DIE/tU=,tag:kynk+oEWK6pAm9wYUUQvmA==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:MpJgvehetJdukF79Dg==,iv:QfsP7ELwKQcdR7FbJKZAYdaxx2Tz3HCkj1EhNDqGLfU=,tag:p7h5Cp4Z1KYDt7p1mVhYjA==,type:str]
-#ENC[AES256_GCM,data:Na5AjghqN8QFCr8mjTRR5WjWyVNAmF1Xvgq4PTXXM8BGAauQv6g3X+uNlrFCqlc=,iv:n5DcgCRkSBgpHHzmnuKFtRSDA/9euTd9XURUYg+NJNc=,tag:dBr7Vqyli9jT6uDVgWLLhg==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:TQKG01/1FGOrOSOqLFafChlvzWGdifmBUqCroKiaIA==,iv:OPaF9US3wDCvNiFNpcCvkIKlqF/AeFhGVnVeUaONmsc=,tag:1o5T7+xcHHZ8ajz3jU6jWg==,type:str]
-#ENC[AES256_GCM,data:I1PATHDdhHnYn8UaT5GngDlVD5pUwkdGzWq4I8gTLolnf9xheyQgSvC4VxaTg3cSG0/8OlKbx2wOAeflVOHG4ACWhOfKW4gK5OKyJ5zgFS2Xfg==,iv:BkVaNzRjvLmNw9q9BVItcnBfzVHqjmRUnz8jXyA87RI=,tag:DETMWheDx3GEIkGJhjcWQQ==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:WHq/SyOQmfm2Z1CQ7wF1,iv:FO4qiBMG+MCXKN+7iEZCurZWOdgicLfe2Y6aMzs0O94=,tag:ufZS2PG2nULWdiPbGHR+Vg==,type:str]
-#ENC[AES256_GCM,data:QDjW4GvjeiMJINLtQMUMCdzxw4NJ0Agwxvd8lz08p+g0,iv:QRrNJkrusfw2FunIVYME4UVywoiphraw1VBpVsWE6qI=,tag:C0QcBuGbpouwyE6oW/AsPA==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:TELopdEklTRbaFHmnglr,iv:MsrzUIgLH5cMZvzbQDUsk4pJs7QA9zbsNkdK/8edSI4=,tag:xmakFDfQAKQjOqV1w3+JzA==,type:str]
-#ENC[AES256_GCM,data:i1xvL7bE7iysGLFmglSLFRMSG8iVlPFhIYG9Yz+4zZg6TVhbneC0C87Z3GVhU7rMrStDC3Zv7EH6L2E13XBVXce5pE+20JBdr+JdNbGaWEs=,iv:mSCQLTN4JJSFq5kHxBT1nOp1VCsL6cZ1uWGfHUNzOsc=,tag:wJHklo3jeiVS8Uupqjb0vw==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:WJv5SDaF0NONpp/oQ6JX,iv:I/sct+COS9NQZVEmdLscI4OpxWEQfRUnpdGeNI77Utk=,tag:BMjtWJeqc2ZzbR31LZ5j8w==,type:str]
-#ENC[AES256_GCM,data:Ns/DOqFylL9YCpOmX7slbRsadoODyJgwObnZuYLCsglCkG8XXvewNc1uW5z191yhoxB7WfUPxgYSf37oXM9dHVAzRfzdlbO4iEVWl7oaCYqwqUkabmOW,iv:wA5DhW0Q4a13zzmr4/SLC+uu2qmFd+TXvcwqcOKZzkk=,tag:JxWbFqReKQOfYwm9JGcSMg==,type:comment]
-#ENC[AES256_GCM,data:LjZTVnOHSU1mhwr4BCxdlcGeL6IKlC2/oDjeVIFEIloDKX7HUewXEV5dJ40ZK9RUckPqewbmyMUjnkh36s+mBMkO/H6iT2c4JpnvkGC6nSZQsXF8hN1SbF5zbD1rVnMJzUQPFTTup+GAthDrFyuy8Ev1fMDbVIl+fI5WTg==,iv:ALd5JkQVqDiBOst8EsqZ9nUcwL56G2+N8MEMq7bs2n4=,tag:V19JfKWA047bYtZxA23C9Q==,type:comment]
-#ENC[AES256_GCM,data:HZD+5LyYjqK1tI7RvqARLpMwBMh43+Bc4DEhKCWLQ73uBNPCTqFVam7aSGPPlGxiDxfOa6Y5eg9piAtX9zKwHmYUPI3BKeWr8u8wO2YyXB4=,iv:bID+/8RGZ/uOKQDK5SgWjphH3qRzAEzvrC2Vt+ecbFk=,tag:ksHd6in9MinhJbf9ergU8A==,type:comment]
-#ENC[AES256_GCM,data:chB/thpMVhxSuEuSv1MxlJvgthadD6UqP0k++5QQh7ozX+57mLkcHkD8rNjFLSGOro4EouhT,iv:qPPsRQK6Kb6Bim6uM3WK+cUgiwjXoCdhEmx27D9lOWo=,tag:9yMK5x2QpfdW0JVQtM81Vw==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:sAf1K6KZk1pyvAXH,iv:2Fzvk1MzWjC7x+DdGLgyqd4EauCKgnNcQH6rW/RXWKg=,tag:nR+qR5MQup1eG42Tzh+24Q==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:dLVTVcn7cYly1XTzsv+IhX8=,iv:gLACqv6RmeACfGYrQ81NPbZBmJi27ABRHHlx/NRAI8s=,tag:P44COI+rK0Q14viNZAdHcg==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:85jqVeFP83qq4j3O5klcjsE6Hi/9m4ibUOsdYLzK1Fk=,iv:G3rr9a9aXqCWj8zMgYqorrRbqLV+e/ntIkBDqrVgOzo=,tag:jFi5KhdDdS3L5wF0WhWn0g==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:7mvOSt2iFtqt/XIIBXum5h0ngIhRD3u/Y7z/jto7ofNcKTUqen3C2Q==,iv:x6CKOer4LdAdgs0W06W/4o4Bm8ekoU2kBaFUl6Dlyk0=,tag:eXJ3/0H2Bstjlh++Rval5A==,type:str]
-#ENC[AES256_GCM,data:e7wFjLdc4QWoOD/6Xs9tKJHryePy8zr5MU4krTTH+RDvi763t1zccR9Q9Z5JAD1OFiayyTMkKZY2jFTici94Dw==,iv:kmeiVjk72CjSM+y1BVq6UivrdXvEygQyZG7KW+Ie5+A=,tag:gqESpkHGH+3rq6Oj2z6wQg==,type:comment]
-#ENC[AES256_GCM,data:VRqy0/cow/l6ER8X4JKb7G1oZpvDIVuFUXufLFfgegcO3g+sJwAHsFHk63pLHYLKCi4uDSO2cYg=,iv:pZgiSjJnitZXwWN36Rxt+oRB7/EfTKLKsOGEN2rHJWI=,tag:8IQyl9bFN60Ob+n+MJ0THA==,type:comment]
-#ENC[AES256_GCM,data:284FidxVlvdWTnMfLNjo1RGUjnlQBgu0+Q==,iv:xNhgjkrX2HiJHTLazI/kv6hWfFAn7zNWTUiQHS/4rkQ=,tag:TsPiR8odSxF42bQ1rQ+wew==,type:comment]
-#ENC[AES256_GCM,data:oUume4DMXJfBKQtq1Rboa8uMCTdRliSbz6gdmXGZgU9mmIvStIB9jNQVD9q0fiBjTeF0MO+ej6owP57iYWGkpUiU36+PKAU7X1aNg+I=,iv:WJjIgE+rRoziFce4DXaZmSY2UGYf7Rc1DOAmG4iQc70=,tag:qixYJdnjhZkVrRbE7M0xOw==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:yQbq4hvVVQXd7ztuwpTugxjhWwCwnsyjpMInX7D8gfgEAbmZEIj4X7vtyrbQ7NTM,iv:98hpLv5PeVIFI71A+gVLmFrPz7fCRwzXcLPuLnfXX2o=,tag:cXBF/YaBeD6Ib5U9dtNdRQ==,type:str]
-#ENC[AES256_GCM,data:XwQbhVzgvxzngvXCPuRwQ1y2bRBhVJMkAaZ/3UjJUgSQXYk7klCkmPBuyphaAdckDBnN8iw/y7rGv4vWpWyflSS2/BnLRSI=,iv:z1xsCDLUWkGE7WuokIBOmHsOUAbQzOezf9JO9YEEmtw=,tag:wvSnbIkRcxtngcWqNEwW6g==,type:comment]
-#ENC[AES256_GCM,data:AVyG/29MJAqKfhmnp1VcX2JPIsFRS8OvtKa956x2Xe2cpsXrYFkaZ1epoLZwinXJl0vkVY4Y,iv:tFSCjdstIrHRNGF2Vaz4tp9BT6sKs1ZghSdeKez1jQc=,tag:v/f+7jGUuUbxB5MbFFxkeg==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:ZmkOs3UXGA==,iv:3l+G6ROU2gIMGzo/wY8YHHCM7ohqqlWXOF3b9ZckQ6M=,tag:e7ddOtr1p8cR3+Z2UvDawA==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:rEw8h9snap7oOZgmNBJqZByVazk=,iv:R/26XXfv5p+IqUfFOg7px4f9fl3sqd8GUhj1nRePJYo=,tag:MK2rBNNJg4J0dVaTf4TzhQ==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:5V99dLQrDwkyGTI=,iv:sL+9BfOK0ZL4o5lCAYOyTQ2wvefdB/PvKb/3NeJiHY8=,tag:SIVXbGHwn5l7N10UB51emQ==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:AW+cfD1by6WMi9krGKnV,iv:v/J/QduyTQ+RYf7syBC3ReDJl+2Ky8rfiIfiV4DdgFQ=,tag:Hp6AOs5EkH/xZ7DK3wrecg==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:Kt3Mf3HGixp2aE8GSnVallmO0fWx90tgyA==,iv:VvB5FLLN3V4rD2TqvGUiknDCArsnJdElKg/tlzx5aMU=,tag:F9pFqIl9i7MYvWjV5af8kA==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:GIwD7KycwkLgOsBjjgJ/DGCWGAsPjpvwBTdb7V9jWA==,iv:7f3nyuweRowOqixKAb7SQYFe+N5QXhW57sKDcwMBxUE=,tag:AL8VmPz173lV1UBS9URuvg==,type:str]
-#ENC[AES256_GCM,data:HN7N1ASxqlA1qwaT9539mtLwSsRzMuZHd4PiPcurHyK6nizQaS8=,iv:ZlvjzXt/tLKn76TIJcWSKffg/o7kOPWI+OKUgjp7SVw=,tag:fYfdxo09NmHnmpgTSM2dug==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:2GfoKIGA9X9daFtIHMveZi28azQ=,iv:A47coGa6vipg4EijOpYdfDwu1Jg02iIrSyBKEgQviC8=,tag:ZXjsTtZiw49uKLIoNycAkQ==,type:str]
-#ENC[AES256_GCM,data:ub2w0IwUT8j3SJzPWXM=,iv:CdWb4oLspfbEq6WZRKMl41H+yCypj38GtcRlt+LhcYg=,tag:mh0McdtlVlsx7SsWm13tKQ==,type:comment]
-PODNET: ENC[AES256_GCM,data:s0emChySxy/lcfVruA==,iv:1iODPKaDZ9cseYNdYMcmASyvBm1wMWXbB6ij67la2vg=,tag:QuG/JNnuU9o8zGVack3rqw==,type:str]
-SVCNET: ENC[AES256_GCM,data:sHgbqSKVpIH7RYKoIg==,iv:iMfdCWCrknJSPSdvBzPBckHH8BgcblKx67oSXFIZASk=,tag:Wke1cH6KlnvGu02OdWI2dA==,type:str]
+#ENC[AES256_GCM,data:L+46B+sa/7EHWzDFbO7i10FHpXo/MH4yJmCZn7P0QuHqxYG6EmzS1xGMdww12hXUmGipSJdA1SFW4Lrm6cPFRH8=,iv:Ior8i9GAlb69OxUuAS8hnE44XBXMInGG+wflgB6zFQk=,tag:NORu0+NBHMu/LKN0EdGsiQ==,type:comment]
+#ENC[AES256_GCM,data:llVfnb8EbYP7qviGqlUh0cmxh459RhfEWTEqtUhrtWdOJo8kO2agHMZYNzY=,iv:GN/JisNLjW4hPXIeGzHjyKGJjaQMIoNVzsO6By0v9BU=,tag:PNemzWWgrjM4cS2oboLxXw==,type:comment]
+VIP: ENC[AES256_GCM,data:XCqTNP5Tqw64cKxZtg==,iv:6xhtdxltTKtKNMefbHiDzP0HVHMAnA0F51YKLupVxvg=,tag:OGdpNd81W4z35n+Q7M6Ahw==,type:str]
+#ENC[AES256_GCM,data:aJMJh5u48GuZ15gqU5rgGjiMcCVMZH4YOaHR,iv:diqTIbiwBRqQjxAFx3tUj+hzXGaLCjt5dL3yw/uB9EQ=,tag:S7VVe5YP7TyA2P0TGMMUJw==,type:comment]
+#ENC[AES256_GCM,data:RQ5EfpwWRZr9/yCIkfUL+gkf/qTYko5jUmIGEkIK6FLOwwL5tjBLKAm88DHqqzhTCDvxvj4xXERhh85m7Mood30uAk0GGOUkBYPGFn3CuwX308y1sdzdm3c=,iv:vc1OfloIojhQWU/NyYMgCcVrZdZ0a2JbR7Mo7sT79XA=,tag:tnBf8fE7lVM7hx6SMKL6dw==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:mu+tiSBWOlh8Fyuzxic=,iv:gpoMJNo/F5hIJuQLJaOFB/8wjqWJumOAAy0cFJMfk4s=,tag:nxL85oxwFrMKCoJrnTN60w==,type:str]
+#ENC[AES256_GCM,data:tkwyCIUzhegaxFjuFKDIUQ5mOU8qrIQ5iuvmZNaXUkEHJQ==,iv:WDLILS0VFdEepwK5DmGleZ3tSD0wbule+uf+Mx1dh10=,tag:/ztvlMqSJJbij0U1gY6joA==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:VPmlUogSlOaip37lUg==,iv:jUpoXcqEqC2LnCWc2wx8PAtDOt0okOAHG+wgzTFZ1j8=,tag:ZSWMp/yGMnRhd+9Se9VOYA==,type:str]
+#ENC[AES256_GCM,data:k7WlXEuzI7cmKnpwJlfnWPW8eyw6YxlARjhTeBMZrnv6wfVq4acBr7sQcaSteRw=,iv:RIZshO5x0ckxH5n+gGEu9MykzOEpgkuD9ttxOBOxA6s=,tag:4OTrwm4HYlh5zbFg6CyOdQ==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:nvqmOVCmG9/59/2ZmYOvpWWew4iTmL4lpbnjhV1nuA==,iv:d4ccco+ixN1JonfJf7siDfFXBqQYsP1myG1z57ecK0Q=,tag:Q0gf6OYbJwDVuUmWRA+n8g==,type:str]
+#ENC[AES256_GCM,data:TjYC2TYa7RPEns1O6yGI3ynvlLk7ucIonm3rX/5cK1YjefqzfWu5/8I+VfCvzhX67dXgvZum6Ry0A5XVGnVini4J0OMFs01SkPuiQdUA8RaIYg==,iv:oIIVlLGDLYG0WPqgO+lPsdhN3RAfcQELu/7OwQ0wwtE=,tag:bzJdcvpOw0fTVd1A1LRTWg==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:+ESQx7Zgi2CPvmwgIH4U,iv:nYpd21iLnh/cjgqq2oLmS8fCiDlD1FAoNh5pTjvyfHs=,tag:m8xmvpVzn49a4xvswYXRKA==,type:str]
+#ENC[AES256_GCM,data:0RH+6KTmHEb8cugK5/yefw70DDzMVjRqflpXrDO7K4MH,iv:MrXU558pkvQ2xY9n7qxKCDzD79RZYGPIqNJRQTUQGtY=,tag:6kh5JUlCxHbfibWvH3LNkw==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:HuqCCRrHj4qsEppeVVyH,iv:gbe2FS6PuQ4uRTa5v6+P0q/cvfD0Oy5Q8FZ5AcWvrkw=,tag:tOcc1z4YPpWK1+PX29woYA==,type:str]
+#ENC[AES256_GCM,data:laNr1sviwj0MvFa+a0ACIea/tkP+X2qJp0OJ/7tWy/LwvfPmIJ3zgRdV7MqUr09So6cbp6wEnQSjVCImEx6YNJicU7uLRNyeQ2IEcslvdWQ=,iv:yvGf5zpbBXqcfKg78UP+E1yQpFBYC5tfbVbHAHo2dF8=,tag:j9V+3huYhjM5eLCwUvI7Cg==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:gkcK4fGjHEfrXgcGsxk0,iv:/eYgOpvkBaH2o9LgQqwt8DdJ0F9IAtsvqEvYfik+PSk=,tag:l03T+KkH8FJHSlBVlrg/Jw==,type:str]
+#ENC[AES256_GCM,data:bf7NCAvbIuVZrGtJa3ovIBcNd/i3Z5Yf/XIT1jpNq4oWUKAwBb1y2TOvDbWFtt0X/QZavS5NkJW2QmkgS7lbVksrjIi4F1gPr6fDmTqghOD3+h44mpAV,iv:R0t9HgxlKhbFfabhSoM/zBWp1s+ubNfa2NZ7I+Bp4D8=,tag:CQ2KPVldpHQREQ3zyMRw4A==,type:comment]
+#ENC[AES256_GCM,data:CaBA0uIC7vxMfVcr336u1cAZSyxPI9tAZsu/Q3mdJee/jFkhk3I0iDQ/r7v6kO344E0jR79ccfsvoWoL8u1wjcvVkKbFnVYzmXHyfr5LO+pWuWfcFUzl3RlD2oewQJkvoGLr61+UEnsJk2qzPskaXy/NB7HZKhqwP5LmdA==,iv:qmtKLIKqKL5TLPLHBWoCnchm8igyfoa0lQrH660G0Ds=,tag:0pidMQVe7JXPPqAiMXlhmA==,type:comment]
+#ENC[AES256_GCM,data:dx0fhKt5o1UlueXbw3cDv2PAqoMoVZh7CRo7Yn3mCxJqkpXFDBEMu5s8bDBLqPPn91pjpt1Wyu1Hw5p3mU4RUcPPv8kXF9Ht0V3SQO5Lmsg=,iv:ic9p0COV2w8fN9szTHHmSq7zzTd0QvWtBvrxVY7yTp8=,tag:u1+E+yQKEssSELNWshZohA==,type:comment]
+#ENC[AES256_GCM,data:o/g+q7bnkeESR/gUHwhcaCGL18abpxnrC3aSuR4K0ahmQMnUNEN9JbN4Sd3XeUryMR6OaFLj,iv:ImyWbDOd4I1LYkNH9mHzNz7ejV++s16f4wdJ8vscW9E=,tag:VAQ6ZHkQacB2Mhpb2u5+Yw==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:eiGg5s9ijOiy75Cd,iv:meXXl3jzuW54nRmKG0CeEGRQx4dVXZs+PHhbQ4W+0Fw=,tag:sOc15lo6gdcE1klqeiK/OA==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:XYlJvwCwvNl/J4vZUPa4pu8=,iv:lVb5a7mqBpDausGLfnLWc4W6ik+KuJj8aIwZDsKCgvM=,tag:tWFPXsuK2YeKFWriVIFYRg==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:HXmR5L66KQiDl+LxR9q82uJ69Da9ZjukeFS0KITlNSs=,iv:WCWn+xuMDiAD50ITqWSzbxJataO4+ROoolqjb7Ielmk=,tag:F/EF/niFYWAAVBw21pvg/Q==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:CeTJ40ki6by0Hj5x8tf1ZPiwecuoOQlperjAab4CqjV/bGpV9yNx3g==,iv:oBHKQ2Dv7TQvDDJNsiWmGcDeT/pNK11WeEbVRf0W8dI=,tag:zlI34tJ5ArGToCxQGOAIiQ==,type:str]
+#ENC[AES256_GCM,data:LShaslOnMECxQAz3hnWGoKlEdS18vqbkK552UZtxVDGBhuvuq62RTise8P3k9wIWaLaVG7xxN1KxUuIsSBpd9Q==,iv:F9JBaaZbSUxtI3xi/Aj5w23BpGJ3EsFri7UrojuJ4Hs=,tag:pAhsD2IB5DPcTbLnp+rbxA==,type:comment]
+#ENC[AES256_GCM,data:9m0kchmB44pJ1F+ATktOjqfQRic00iTOPWp/gfyNGPVY7SWw34Pse5cnw0Mh+gxBLzVddpt+Ol8=,iv:uiXomEkksmSy9wUq7iUXjgxCY6DB2iAPS6cEJn/wIWQ=,tag:vD4PAt7EjdHg0oqwjd6E7w==,type:comment]
+#ENC[AES256_GCM,data:WWHlFy15Hlve7XBMDHHYMRMjNhg/cmoBzg==,iv:u0Nf9XHQjMzl2PYp4cpQrtSOAqNReemUb5/iXZz2a8M=,tag:t6+2kRHMFacnyCuxJMMbZA==,type:comment]
+#ENC[AES256_GCM,data:ICuDXOx4TSgoPhlox8/ZbKEZIg6gvRqWQegBQRZnhNrA3pVBpMunRIn6odkBXK/hRc802l7G529Ze4arbkg0AN65Ow83d5ppMpL/IAo=,iv:JAvBmlFH54eImO5imnHPWmtLrYjducT44bR1bQQNWdw=,tag:2mhBu8v5hyvIyLznATLGFg==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:DyNraQ1uxH7Dnx02pS9PNOLZ1ir0+V0nXi4uE5q/4dArEnrNYldVYaipJH9XmgsA,iv:yo0Wq+QSCxoC8Vhd45TtK9Xq+W+lyYAXacsVlsiumfc=,tag:BVuSY8AsOa06sjcDfU6wkQ==,type:str]
+#ENC[AES256_GCM,data:tF2RyocKgIyq+L2rxPMoNIWUtEhwVMTOMkBG8sa+8Vmr6z3Je9uq+VZJ1tLqSm4lFfOw5wT0kFUTLC+CxFckWiat6x5QFsw=,iv:TmBiCYR5Egm5DvseAyQMPTb8afqiK2MQCvkV5Hsdnys=,tag:vSUbOWqPYS/QXBe6o5FETg==,type:comment]
+#ENC[AES256_GCM,data:RjGyX8xn4NVMJnmBSA84Fcbbv8K2eFPuNwnl9AibZJKxFb0/y9Jr8Tim5z5VNDu/WtndExSG,iv:Lb/DAHLWnS2x+1ahll09nYvX/WSkimohuK597ww9rTM=,tag:7xbOCNe2bxAqNzfXkBRs1g==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:S8ZTF/lxQg==,iv:TwDH2QXOgxofWXNSZSPxrUM11HDtEOKJxNRsE8wJPDg=,tag:hfdW6ZmTc79pHMGnf9W7uw==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:rLgGCYnbrTfEAC7s5E+aQP2/00Q=,iv:vDHVq6lNdJhjl962AN6wf5qjcsUDdUo70oApoYgDTBk=,tag:yUxuK4EETsLSFzGd6FlXOA==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:xp3rWv/7H8zlwsc=,iv:0V/SgMS5bfXusHywDeta7a4L0F2o7zreE+ijaTsqTMM=,tag:z5nJiV+gHt6HkZsvuzOPYQ==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:X9KJXRnoC7he+w1+igR4,iv:vC3tB/eO57Q0iAUPiG8bFXxK2UPdKL80+NmRsPKoevE=,tag:59c4BnhN3ASkJnozIMnD5w==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:U4+LOw5dsTPK61xN5RaTBu7Ov7VPSYHkHQ==,iv:4W7ljCqJd3/roT8ptlZc45BiRQtloqg+x0qOFdASMwg=,tag:hlnyfwzvwVeXkUk35PtcAQ==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:sItdF54Vq8HVBNekUWb8GDJ9ugqs93+cqr0AxkebGw==,iv:btTXvOwpsQRgxtgmKrLp53d3fr+5pF+RI1I2gNGOyzs=,tag:zYI+Xm0C9gycV1z4bfWNKg==,type:str]
+#ENC[AES256_GCM,data:Scm9vZeq4GkhQFpp+TeQb6Vk5l+g4urCAvgTYGKNuhKefOhwjLE=,iv:rQud0L3oPSTfHxeK0UCOiZnqQtHVjuWQfa+YXRrpeo0=,tag:e4tHu1aEIspjitUDTpa9lQ==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:Iqfa2u1J5/vlI4R98xDE3pSkSUY=,iv:3Ban7qO+y7AGJ5rVOc36GIqJOczPsHtj+5BXw8fvKbI=,tag:cwxrFY7JSaXgAd9Tz+WpKA==,type:str]
+#ENC[AES256_GCM,data:jy6tW9RJI9elhdbNWas=,iv:5ocQqYVwS+ueMNT+qSQt7ud8ASWVbS2O2DzRtlpDkPk=,tag:3LivWRfLqw8c8BgECgYFoA==,type:comment]
+PODNET: ENC[AES256_GCM,data:jfayILm/qXSL8PPGkg==,iv:zqrhL0yCzkowvH3hPUsF3EVnleyFzPUs5g6ljFoYFOQ=,tag:mUyIhNVzA/Yun8Met/UxYQ==,type:str]
+SVCNET: ENC[AES256_GCM,data:8p/kuA0auGjabrNcVA==,iv:KdVTJtGLDULXCyg9ygDeQp9ohbFG3kZfwddc9EFKpzI=,tag:sXtaw1LbwF3taT5dl2rU/w==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvM2Z2TFN5UnppV3JEMU4x
-            Vy9NSjlBYzFVb0lNS0NqOEhhbEpNcEZsSGpvCmoxZ1k1eVNkdmVpSC9FT1BHWGN4
-            Z0s4WlFPRTFpNjRwU3BRY0tNcGtHemMKLS0tIHdSeXBQdStjMzliWWlUZjU0N1B1
-            UzJXdWhqa3h1L25rNUZTVGY3VWVZR00KjmMx+VcG/DpHoUnEDXtLSiVHr4sgaO3n
-            uuMBhz5K7k/85DNorhk51zjJHJNXeaTOElPMohCCOgx8RUs4EOJJAg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkRDNUc2pvY01tNTNuZDli
+            VWN1d24zOHZZVVJpcURZK3dpQS9YOHhpYkNjCjhkeVA0My9seGRuanZZWndzZjdK
+            ZzllVmRDM2tyWE1NaUNVREZLcERXTFkKLS0tIHY4dmN4MlhDVG1raERGQ1lVYnlB
+            c0Ivemg4MHMyZlpDUlI4bkFjdUhIelkKWUUwcWAlbhakOO1V+H6wJ9aec8/+8QUu
+            uE5TDHi/4T3kG6LsJ/Le4P0VLwbkMXdMJzNIshxE5Mo1Y0ZPUmGNLw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T02:23:35Z"
-    mac: ENC[AES256_GCM,data:yBxquG70ALJanB6fE4c6Emvq74uzijvyl8IM0jivSGXu/z+Gs/mLsqfor/ZQqIETMJEBg1x4O7fdq7n72+/2SSucDTdkx2PAelh4AoOIu9LqO+rBxZ9socUJxqS/s9iH72vauWBwi1rXPKSCBbQrGSN7cuPDY2FEFXiV33zcYkc=,iv:e0R1MUl99GylHE8V6DnK11XD7L4Nq9QTUfK12nYY6+c=,tag:mfW9tSt0n2qINeOvUspr5A==,type:str]
+    lastmodified: "2025-01-19T02:33:50Z"
+    mac: ENC[AES256_GCM,data:39plrArgSNVwC4kpGlZnP7YL7LU23HLjE8Y93qHL33ayaZdn+tQP03OtYBmu5jrIKeFP/iRAxTIXeKtZvltNvemOL3nqNgvI8nc9EX86YVv7t5CoSRahSRdn33ty4dkWVUjhs8WMcPJ/MKltTC8+H6VP/zM9GNN4b7RLabuIKhs=,iv:FiKcNaVDuoGLf0c6Yigczd6KCDSXCiU7FisdP8ffRYQ=,tag:8hj7ZP/hBmlL6KGoQbHNfA==,type:str]
     pgp: []
     version: 3.9.2
