--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:yC3rBrWzJhgN9g1L+WFgFZFHGcXP5E8ZvkVLzVcH2we2IXIDhP623REwy99kIRUdixI5e+w3JiBZNTFsu1xCmVI=,iv:yefYm0Eus8myJIvnz911iAjYhZSPINBUtzcJ03v4ntc=,tag:YCIsKprtWriO77gax7TQKw==,type:comment]
-    #ENC[AES256_GCM,data:1jtE+DgmjsXb0pkOmMRi1JqEtb98iI3Wa7IjsuMA2dP7wjIbD9SgU7elm1c=,iv:u/nOO5bSzma401/vo7VxvxSDi04EAF4aeQ4UGw5q1f8=,tag:vRPJRQW+o3rSFqYo+iYgSQ==,type:comment]
-    VIP: ENC[AES256_GCM,data:lpEBOEp1lMC9sPiRew==,iv:Q4voX6szpC2BE0PobjiDZAiZkedqW38ks1qzzh8kjU8=,tag:yvdZ3OmCYSA4chepkIHYkg==,type:str]
-    #ENC[AES256_GCM,data:SbOyWWuOpDgC4bKbMw45XnmNioV1qIimeZqV,iv:h7/SFlyb8teVo+9aHscc9ii5Nm8KlpQw14sFOHxsoPg=,tag:i+zK7XM79UuWsoW5qNuIrg==,type:comment]
-    #ENC[AES256_GCM,data:IsnKWxUV1pntV2SaTQGO8rsyJlJz1aywTTsr/9MbWmg8y8bPIU/LFx7dOS7lGkc24RgvazuLwhIFzorqswvBxyiki1apIM86f7e/yjdJGobGNUjV8v9Mb0Q=,iv:ArRv50E2SWXt0MrUsIvsgUdddTmyrvFGxzdDW4Q5KQE=,tag:42K9C27+3p+Uk7RRTNfZNw==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:siO25hAHKGZUbxmelys=,iv:tjjy8t4fNNKEFS66Z5Y1BSTp320mnmaVGYcOF5ZJbHM=,tag:cYtvQyfK5l4ogDNKD3Us1Q==,type:str]
-    #ENC[AES256_GCM,data:2wdThignNyIHEvs4Bpzqj8QDVpvcC5vLHeW6y32efuLZ8w==,iv:iuMd/Kvls2US10rdiTKP5iI/K3MZ/EQqCmq0pJyBxyU=,tag:Ea+rIuiXM49IjkvjHYRoMA==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:c4Q/DcAA1g2/1A2k0Q==,iv:km3ZBR2Ej+pg2UUnbXkU/Vxj3Sn6FFJChSM7oaG0ze4=,tag:jB2jHpfAob3pVpmkHqKkXg==,type:str]
-    #ENC[AES256_GCM,data:tb2CimGMLHy/exmQvSvF7kE7atiusHGuus5FuYeTPZoiil1kkmEGjm23/64S+F0=,iv:n14EsP4w2/62tJ+YTIIxYMjqxt+rKCFIjnExbt3UTBg=,tag:wX5WktlY/5tDjdVT1ppXbw==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:z7E6yY914lhVwdoTPosCL2FRzJ1nRJdac8UO55IJtQ==,iv:392qPxqY2ECWfKPVP53oTgf6Wx/OjgckToIPuzKkK70=,tag:124Wl94/JTs+B+cXAUPMYA==,type:str]
-    #ENC[AES256_GCM,data:8HdAWeOhCxdlSW13dS4VCdepGsuo27qw/Nfg5a9rhbBH4SVbD9Vvssjn+Yv6Fb2NTYgw7cbMhl3+ReUU/6c7q42C+P7x143ylnrYr5F7uvMZBg==,iv:97NlHivoaefLRtwbOTTPrIxztojeSI8m9rDNXCzAIV8=,tag:dZnjjPYcF48xx0dDkWr+Ng==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:wngf4NddXIxlmiyamATh,iv:FsMCblvlXODhxaFhHoWm4WgSAISb2VLr8HyF9+Ik47w=,tag:nyJQ9GJl7xY6Dc9n6Qeb/g==,type:str]
-    #ENC[AES256_GCM,data:0Rl06on58Y9msBESbjvtGiDKBbxT4IDYTOmuWRdXenyD,iv:/YLz+n+kufMzdp4q4UB7/OZ4o3r6MGLHu+rM/gNRWzw=,tag:8yJqj0pb9WVjNxtZxnhgdg==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:/RvFB9Iar69RCdPMpobr,iv:kBKp2rMHA3NROLgg4MMUbayeH/7pq1VQoKbQ5UC+eJQ=,tag:8hvvPeDxefSkj34RPNil4g==,type:str]
-    #ENC[AES256_GCM,data:/w3zOgOhXOztzCX7zhZLJl6oscj4nw7ZiLrpOi1HqwzmZ7otOubEcUoCa7LmZPh5XlH/wAO7ZJWnsNPdgFFNaE6s2Wrfsl/dtNqauhQKhrs=,iv:trFbtRQ6gNN//aOYpD8Ul8Sw6lpSvWxF3/kqbkiH+cg=,tag:HNMTjIsHdUD3nK5Cyc+5XA==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:EZ47US7kwNdo33lQomjR,iv:/apNJKTS0MbVjhuUsMJxxUUfWo74UCCIGZUUNQ31/+A=,tag:pnJ8gbhomqDt44sHIch9vg==,type:str]
-    #ENC[AES256_GCM,data:CfZtAVIRbdvnPBY+29ANqCScHsiUP/NqOYHHY3+2joe1Gs4Ftr5Fbz6NyQ1gc4n/gQ5HvHJKjEucZsRPetDxlhuyBN1oQvPUL+yMfTJuf1DHBmRAYjvy,iv:c1WaCM9jDhIQLvVEIDIhq2mWbwcZxT3mocrpuXctyo0=,tag:I/YcQRPj0YfDlrTsxuRueA==,type:comment]
-    #ENC[AES256_GCM,data:LFuRjsI6mGYTU03dNxLQk5I7Px4zJ+9ViUfbSJ9T94YqfIvWZJmOOMgrc79F9bo3ayysQQHtzVnUuhPB1uupxHlq0Dpfu6GyIv6XRIae0DYjqjSUTbJ4OkArj9LCASRB+s7NPnj8LqmMoLcPSXgphIRnXgjrslRLKJWlnQ==,iv:rrsDtSSmKAu43dc2r797c4YdZg9IowW68cOzG+Gpe2Q=,tag:1xT2rALG7kBdL35PcnqCxg==,type:comment]
-    #ENC[AES256_GCM,data:kN1XRRVHLQ23dZnmKWJ9bPWAB90ZJVC2BTMYrRItUgHTCgUKg2wmdCrxGOYr86CtlB+nVnqvJtkWfVPaTwdRxcphNkdjuq1/U7nrvAHlkYA=,iv:5MNoVkus/gz+kE6gp9RmXSNziy0AmtoA6XwJdet0SbM=,tag:0WPZyoOCqsX2SAN9kdU2Gg==,type:comment]
-    #ENC[AES256_GCM,data:n5D6WAx7d0HT7M0YipHl3gPoa7NivrJPysCOVriKBHNJh6CURO47H00q+Zy0dQ6Fn9EA6oMl,iv:O1vX14vPBtYmwMXIPwZr2Y3Pq7Sp8uxZlDyGWsm0Q+Q=,tag:ji8b/e3pSfqJCuf0US6x+A==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:mlqRhYZIHSghSyPa,iv:++THg3SKYYfbzE8G4ScLjI9Z9Y2U/2VG/x8BKcWIKgM=,tag:Fwa2gJGPLKXaPoSIZs8c1A==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:mYSPk1EOkCf3yEcqK2eCr9g=,iv:RQeXioHMFM/xO/ROzM3OCYKWfvjvH1pRUeNVI3tiCuo=,tag:4z8cxm3Sjn8DC6IcxU+IEw==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:eH8S52Xqh2+Tg97sgaZ9d+CzKaoktR/h5me0ZXnMEHs=,iv:9IM2YJYaFdLOOCGmgQWIlztyYypHsvdNu1JJ2R6EgX8=,tag:4bCJkNdJzvwWF2JySe6T5g==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:FhvzXswBtsTQ7MggBnGnS+lQbSisGB9md3gz2sPpFgKk1tPk17y7Qw==,iv:bF1NcAjQXkFFD/FiCK+BbwYxF+wwyM28X9PsWbYYbHU=,tag:UIyfeA/5uPOt9ygOh89oKg==,type:str]
-    #ENC[AES256_GCM,data:+RN/PyICf1kZ50hvOy4izwrkijED5b/sjYEx6Hmp+IWeZmw8DMedfuUIDmAbRjxrZU2MzlfLmrQzdYpVyrXLOg==,iv:2/jix2Aun5Mjm6K/JjLQYVf3Ipc0sC9mnNZpEDVIlA8=,tag:8XbEAgqSzWw+CcwvhA4qXA==,type:comment]
-    #ENC[AES256_GCM,data:xEfWws/X7RVMfXyilimc2nwYNLM5sIkK63zO6Gzu9s2RC7vvuMNjXesas3m6gsdtWlbjyRvk7bw=,iv:oxXMZ6ooZbVv8UGv084c/wzU6VQPNWaMoFDAkOu3gLU=,tag:nxawN/FjTMcxxIEcvDy59A==,type:comment]
-    #ENC[AES256_GCM,data:bDGClybwdTaiyiuan1CxPirxRcXlD/pzGg==,iv:r9RJX+bUef3GAFrYcCLjWINxg2jbXvp//VinTXayPW0=,tag:AuVb+B6sGA93k5yZbJW7PQ==,type:comment]
-    #ENC[AES256_GCM,data:AqJ9yOrAzfiGwhBeIFzjlWPYlQy4jcUJURBIv2q6TMchUvK5eLMAOocxZjdHk0MnQSv0+3nGcNtQbz3JiAsqElCga2wYNMt1TNTUuz0=,iv:IsiOBRMhhTE7Pdwv+B1vNcqxvGNpYZ+8EIUB1Hr7Te8=,tag:Vev1zQpvo/lJ2oyzpndN6Q==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:Gm7No/R4xcCsP1SOYE5x1D/QMUZ9dmhXucEVd0LQ3cxiOIOOLXkMkBushWucHgyf,iv:ZN5qkjrNGJr0NJtFvDGAs6DD19nqtKP/B8tfZjpIjto=,tag:cosWbvnPK3qywA3/gKDfAg==,type:str]
-    #ENC[AES256_GCM,data:aunHuY06sa8ukSqUDPyyNTA7EfESQcRJefbf1hlW/z2LKbcvHdZYLY/0sgdZHYMak1IMecEgjvXTWJe9bOzF07xqyZ7k4tU=,iv:kJ9iItWxoXIJJK0uZAr31DCFpGLVWA8+vdHCAgz22wA=,tag:c0/gEpWQh9Kp62HUfxIQrw==,type:comment]
-    #ENC[AES256_GCM,data:W1aMzpFqc4lrOep7/ln2H+d9j0UDthASOWHAjoumCNm9zlbpUACPnPpnWxxf5JY1ISlkiziY,iv:navtQ9OEJtFqGlSPKUSLYU1+E5s8iRP9UlnfPRuw55M=,tag:bOgrcnIq+MRzdFT4vXG66w==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:nrw4GqJaBg==,iv:Xl7OYYAhMR+e2/O55J0wnqNSdoWu6K9IEJRpVZ/bxyM=,tag:yGdZ3yo8kJuhlBpBEvD8KA==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:1nNTVi30UTKP8waUK8K1cXNu+0w=,iv:XGO66PnAv/k6klZYfnlqdYwLtMLlYiwscjvP/tRFnCE=,tag:ipRMB2SZ6gwVIs+IO8+Bzg==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:nw1dCp4u9azt7e8=,iv:GxnHb3iUdQ5TPa7ZF9NEOEFeKgYMAM24jo4W55hV82U=,tag:a+Oo6PwdU2lylJNNcTEOLA==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:lF6YvBeGT5j5AO4WgKgX,iv:r8IgmI3P6V8DYOfKyfjmzD7r517M3DxTeafrz7KktbU=,tag:4ES9+Cj+18nuWeTifxCNiw==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:elW1ZKEzd/Jii5p87iPBG9uIw/fbLUHEPw==,iv:yes5W8bfLBOJpkqltBCtbx6ZNJ05cz1PiZYTVRQ6Nh4=,tag:lueCx/p0ktnEsUQsi+9zEw==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:P6Gg0SEhoEdr23FbVNWQNIiztMytyzaHwstEmxfCvA==,iv:mfdqTL1VW85TuGAilPc8slmxyM5jTLRwxhmn2EUoLEI=,tag:V4lC20DbWgEInEo3wDbzzg==,type:str]
-    #ENC[AES256_GCM,data:G/SEx8PrgnwlaUQfnXahQ9EZbFhfukxXxe31agZGSHgpd15hpDs=,iv:KHUQ+IlrobF+L8k3DTICVLF7AbPRbR/hv4maywy5i8k=,tag:EXF1TTg8unpTWvkSWYXWzw==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:jeN+xdVXdXFFhLUwFTBfl0b3Y6M=,iv:1IbJDwae/Z0Q2BKG3/pSeUMWG7bqjmGWBzKmAv3UgAQ=,tag:3EC6Iy4Tld6KmkRRtt4J3w==,type:str]
-    #ENC[AES256_GCM,data:PfuobQb3XMXA4NCQj04=,iv:+tXhqkYPk+QGssoDxyKkXgU/1xa2f33xawGdf7XL32U=,tag:hp5aAk/2SsK0dMcKF3bRAA==,type:comment]
-    PODNET: ENC[AES256_GCM,data:mnlQ/35+f9LoxkNsCw==,iv:i+sinSVbkXNO41d4ElM6e1WsGXt9UZsa1Fj2NLk8dkk=,tag:77FTTsmR6Du8BHuYBSF7gA==,type:str]
-    SVCNET: ENC[AES256_GCM,data:wC4/h+tCnIWC/4RjLA==,iv:xAEXN7Hy+4TzULokszaG91Ew+PQXgjmwO3De63q1FrI=,tag:qEd02DZroOLarHdoiSBgEA==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:PyFwAw==,iv:SWVkfVLxuaYtgsT9mE7MZMIY4CkSQH7H3qtbm6or2fU=,tag:xVYDFvPD1Lb250v+6xrbFA==,type:str]
+    #ENC[AES256_GCM,data:Wo3DgQnz/QW/YXLYHYpG1ecEC9CTGLPpLvDOhtxKc0ZwWzV1JVd9lfdpZlBitwd6RDQzT2cmsxWwqqIiS6UK7cs=,iv:JvNi9w4z2zkNLTmWa933hIslqtJzDGgbjUB5OOb1pD8=,tag:O6kM+5Ljr7wdbH9oOrY8AA==,type:comment]
+    #ENC[AES256_GCM,data:qNoBEOQ04IDWTD5KL9E2SuVI3QUnRlsrUDyQ2Ve/F0bVw2r1ZleNqsRZ/6A=,iv:ZaqHUJZAJSa5PV+qrOjrmUCelgQvg4sWCnJ99zDvftY=,tag:+STEYi9t+N/ipVvCPipzKQ==,type:comment]
+    VIP: ENC[AES256_GCM,data:gmwk2EozlZFjtOfDyg==,iv:/Ir5kC8CiwhooE28JLp1tvA5bydzeg2YLLEb9v866UM=,tag:dfaPy/h9VnD5ozCaWQVI+g==,type:str]
+    #ENC[AES256_GCM,data:IdE4p+fUYaKCLEeiwSld6ZNmF8tH8bT1fn7M,iv:IpwNW3g4IgGm0m0/Pkpj9Ms8ygQ1Ne7yTXvhIIAIAIY=,tag:vtqiIQp7n3+IF+bNzzw/mg==,type:comment]
+    #ENC[AES256_GCM,data:+gQIyBdQuhq3SWTDD0m7MfpH95MQFVHR+ATLUVR0uBIg+mwHSPUTk+OU/K/zL6h8bEImzGnY7EtDpVpxezNuyIj+B2z9lKC2en3lgk8T5Lxv6vX2VMsSbHE=,iv:b+UKihBcGHRaLA9OIIEZr8RZ9+ksbDj23bh3PiiLpFU=,tag:RCsLK/jEo4lPE7zS9ojj2A==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:OhVUybyWnNyGUHsWJPY=,iv:yDr9k6KmRAXQFi99M1eB9vr46iUSKOBYpkYnV9NYMWI=,tag:xJ+puahQ2g+K3BQB8wZ8eA==,type:str]
+    #ENC[AES256_GCM,data:vWEsd4v78JYp1Z7JF1+aU2FgY+X96ZzABY9QTZ3Zxt+o6g==,iv:H3wFUbv79gTuJey62q2snvdXMLL0r1WGu3NSaIM3RAg=,tag:Axg0hj1kBAT0L9rv5rzkqQ==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:nSKjb5go+/knK+p6bQ==,iv:SXXA7GaoaOl+rl8hWDCgVxA9dTqijYgQ3m9EXzXyJLI=,tag:YhXHbUCUzAa3QH4ZmzW6Vw==,type:str]
+    #ENC[AES256_GCM,data:wNnv/ZjOfntv/O6mroOSQZkiaSoe8A4gDbuMKl1qS4R6xShgO7vOGeMQifcHVlU=,iv:1FLDJ1CDM2RGNEZ5Cxk0eNyT/kTnDfL87CZDW6xMckE=,tag:G/XCq7VKtT7hGWS/b9uaeQ==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:Xg1lCV2pv12JqdhcTuEmTcH8lQBuT2aBfY6ulMD1Zg==,iv:rvkAWs1GrWkNTkpyIY3bx+rAtUnRlQcl5bzFU2zme3s=,tag:n72eePcRvzozsbMf0i5eqg==,type:str]
+    #ENC[AES256_GCM,data:vOCpf6f4rJJtDve8JAgIs85xbzX6ur4EG8H04TOYkafLt2cU3L2O1boFYy+pHfsbcWM8r8BA2DIEPL7SrA6GsR/+5blAFv5mWuMDgHwpUyIS8w==,iv:CTjQYbXUlUxgU4Xc8kMpZELq+PAjPQtvHbKwkw8u6qI=,tag:KiqZohP9SZHI1HG2B4MkXA==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:3LfGujgQONK4LrXy9yUY,iv:DKB8ndgVX+e2z9LlL38kbUIg6IaydXjYwesxceU9BRw=,tag:R9MwFd+ff3XO8Sq/U7aTGw==,type:str]
+    #ENC[AES256_GCM,data:eJllGssu0Lw2Rh/zXZK2iu8zvv5KfP01cNEv32b3fp9P,iv:lXoV98JiwspPQNHUH4TTGlSTFfYl5p0kRuqUhKTMFZc=,tag:mJ7a8PDxMrYfFkPEJiMQQQ==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:TgM5YKxYMSSKHZlDHf65,iv:LpXNX4HL4wKoMrWrt0NAMGJirsnH0EcN8RPV84dU7q8=,tag:iWUkMb0fTpRXosdgeezrmA==,type:str]
+    #ENC[AES256_GCM,data:NudVa4fQOoos/9gyPz0LbskUODgxgSlh0sUe9tO73FI4ME26NZeRGHwkS9LySIsHcBu1CATQqA768ejjkEQyNqo7rsRGO3uqTfvgRTA1oNM=,iv:x/IvqyceayPAN6zG+0cHHxasIG0qKHjtVmXlDYNEhlI=,tag:ZJoqK/uyJz5sOOkjeg1OYA==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:IPm/HkeeT0KiLBsDkybc,iv:cNWGHW2S95dpC1abeBI5b5StH7CQCB4JjtzGJq3ILsQ=,tag:D7PHmTTukmnhtF5dsbZG1w==,type:str]
+    #ENC[AES256_GCM,data:/+Jxp7NGg/xhDsDaEJdccH9ToJX0FuJ70C7TzttDUA2MdEP/SKfX5LMckj6qU2dHtnmV0n52AmVaIe8uEpc54vuhfLvyjFx9qX8bne9mWF26fc8f4mQx,iv:ReADFc+WgChnWB1ktdjVPUx8aMmH3vtmQ5sCTgmKavY=,tag:1rZ9nRfedrhN8PNB0NC0fA==,type:comment]
+    #ENC[AES256_GCM,data:/9qBYVvTL6GyRw0TijfYugaxPKdka8tUPSg20CnWGtYavNKVKr1XuTSJRZ26ZPc1t4aia10r6OjJ2rjXvZ2kw3WqE4MplreqeIaT+e5v98JU5sSxBe3H0dPg/xIiXgNtJa81mxgJyI3PRKXW/4OS57X/UOBYOBcMNRg31Q==,iv:0NlYC1IlOMrSLaqUQ6raJQrCCGFZaB1pL3oeTbLX1uA=,tag:0RS9UDtdBETqW9MeDK2p+A==,type:comment]
+    #ENC[AES256_GCM,data:DtnTRO43vm7yy78CXG2uGINsb1kk22yPWhudfHQaRtnkuV14QBFfZGAFXQggwifS4I5uOj2jNWnkaCB70GDovtg26NMObaePX7LKdZrl4KA=,iv:8KEpd6xw9JCC/dRcJWNSnl0gI95hf17VBpb/L68e4MI=,tag:RRlfA6L4waLotLlnvDSvlQ==,type:comment]
+    #ENC[AES256_GCM,data:oNexlMJ9mcQhH25rXN/QEEiOqiSoQIzbyMIywRhOQ4o4+O42D6eNhFLxz7yTcIeHMhZatR/p,iv:hr2LBQspVw1AhVig8fipPRLzSnfkfReUqopJLBj2jfA=,tag:wcNnvXmcAAMiaK+SUB154w==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:YfCSxAbIRjAA8ZtE,iv:wywgED+IgAWCv5s2ugwzSxWs8uW7dh1ABu09p9ADTDg=,tag:06bpGJrif6pZ3CA/gVdlSQ==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:a8NH1JN4OZWDBwu/kGfKLSQ=,iv:/nBJTh+2ZohgkQs8L9/CB6wF1Kkq+H1fwjHWfOqyZRQ=,tag:d3Rm5wyo6VYUW1fYlDX8kg==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:fc6Z75weJ5af75e4xFLLdycCQ0l+VAKB1XhDUIJbBkQ=,iv:noDPa4gUcmfR+xlHywbQgucbyHbnNgIyS4cNeTjDnF4=,tag:1WRp7AMQPyjqcfPgXnlNPw==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:dborKk3Wzu1Fim4eyFR+R9z41EZRi3HfCcgh3kepa0OiyadOibF0og==,iv:m4D1ZBL0JDv1aMkveXXUWxkd7R29SAtsWOPeXm1pEjM=,tag:tBHtMA1yTfj+eQTQlbXtsw==,type:str]
+    #ENC[AES256_GCM,data:0goqLK9yCFoFb6nTCPYULEY8NSgypxBY8znEz9IQ4N/Bx84dZCDmhIeRZ4LTbGY0LhqdvbXUVlkv+LWKKbZolA==,iv:cuO0y2Qkp0xjGr1yFwx42ySDwW/yqO901cYhEWKmGVQ=,tag:LsSPpZuTbuXfm05xdG7eqg==,type:comment]
+    #ENC[AES256_GCM,data:j/Zk/bvhnLyKRrpOhaKnfwU0Do+/42idpvzcPB7axNdEP95SmM9QLUTRtTuX3pLjhE6k648EOMM=,iv:F8FQkjgrqkrnw23l0NEgUEg0eB/PQhv6KEuhWXGhU0s=,tag:pjH5Yep819mT8plDUqGBQQ==,type:comment]
+    #ENC[AES256_GCM,data:J/lxSlvitNuMcQhkT1u5UqoTybgx36T2YQ==,iv:Y09m6hH1jFKz90madGsn9W5N+gzY7cSLk4RRsv8pEu0=,tag:xOqySh6mQxbx8Z9/ikDTwA==,type:comment]
+    #ENC[AES256_GCM,data:rsLykzhIjuiV1oDf2uk4x/0gmpv8jXsuVG4Y22SRoFhhQdmXD7IjZV7FI8JcVr++b5dzFS3t6rBsly+mC7JGTTC6JKWwV96Ld20DJD0=,iv:uLAoykGJloKOWltH2yUwTDz4Q54XpXXlcoCUG0TffAg=,tag:YoI1WpRzPvUkjk3I8Ruwkw==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:j7LPSC1ExqzkTsgEeD43PixqRdqsbohReI252VCQ3bEeR31xzB0FOHV6PdY5VGn7,iv:4f/N1dllHkeft7gk2ajAnLtzzyoGLAja3NSb/Ht7UW0=,tag:5IwA5kQjJkHNfbUFhoSQqg==,type:str]
+    #ENC[AES256_GCM,data:WbLMDXojI9ZmtRyOjdtW8bpwr5a/z9UgECT/gJih6vPw4QaRt+Ilar/2VmnNaZxOy4Evk1eu1yksDdt9NfV0ubIDOXKwcfc=,iv:TaELi6QYWPlSB+9vSfbgo2NC/178hl/BYMim7OLjZd4=,tag:sOrHF8A49tNAN0YqRmufoQ==,type:comment]
+    #ENC[AES256_GCM,data:cIu2ijFmCZAET62zeS73HRavTsFmHRguQA9jsp16NshdZX67aiWnRSpJB1NLSFudVghIX9cs,iv:ibgRqY7hxp+azanois8q73g/w7bqh11VHGu1NNp+VF0=,tag:zgm+GNXhf3U/O8QXTDlOPA==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:dgnGnQHSpw==,iv:FfBouPREkIAvRhnY/M8ND7MQbsbALBD5xLygR9stey0=,tag:8i0mgqWH8QEiUat09lBRXA==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:B0EGelSMGuK2PClOJplcYVrFgT8=,iv:Em7F3mZbSgmEvBMQBjHuWc3PyqxGqwPuhHofLT6bcyE=,tag:FC5dGiPAi4LePz+hTe+xGA==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:X+g7nDHrJGVmZZE=,iv:+FVtbuc+diarckuMWw3eeIoaUk9uPg1aGtQUKG8DKrs=,tag:pvfY7mGM+/FXklQH5FcXfQ==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:aPNmWmbuJJmNzSuHjY68,iv:Wz7Bx0Oq3qrxHuOtjfGEfps5P+UP2+8jdBViNkD0n7g=,tag:9J/NFzxCrmffjOZ0L5iqrA==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:as1sNlE8p+PYmz6pfQs05dlg7nMZzal7Eg==,iv:Uh4IPYVoxtLaOMteA33nhVZyDih+c3eIkcnX5OVKPOw=,tag:nZats5uLupvoDUdswd4v7g==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:n2bQ+fNQCNVLUkShDD/297OdUMEW/8KqoD3/WWYFJQ==,iv:tjUVabxm1XHGzQx6Z27FXynHcoUp0mzccPGb+05r3ak=,tag:0YQp+Zdvw50Gp/jM/HXjRw==,type:str]
+    #ENC[AES256_GCM,data:6kuH0/XQsWUZfIO5sw6U1hAaHwEU73uww9CxrMfrnbV4qip2UZg=,iv:Ir7EpfEzuLsHq/LhO7U9tuNp2hnbfuw5yP0nCZYl+Jg=,tag:ehkv04BEXMMfnlBhYKuRDQ==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:6DA1BHOmdL5ShTj8kc5T7+KDg2M=,iv:ieKr1hDxPLCtnQGZyS5nI6dwarzBVxqhbT/ifFkjEp0=,tag:k3V9REFAQCHqoBhHdoDtaw==,type:str]
+    #ENC[AES256_GCM,data:XhZrN9GqZjkrhmxIyxY=,iv:3zs01WovJAQ3IIQcU3ZT89t3seeUN7gshTnh+Wl0zf4=,tag:hOtS8vieUEo06F4KaNyMng==,type:comment]
+    PODNET: ENC[AES256_GCM,data:F2QnvDYFwCFCOboJbg==,iv:VEAKTFe7nLYFHx/K6JeAWaQq6XCkPef/h3T356yt4QU=,tag:tUpKFYJ9vWbODiomF3jgxw==,type:str]
+    SVCNET: ENC[AES256_GCM,data:WeUtgFekyB8lTsedlA==,iv:xfwRDHE3bq7zBc413OBdlY5vd7PekX/NUBpZeSrMiVA=,tag:ANcJHr6Di5y7Jem4nRItYg==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:2bxqHQ==,iv:KV5LzDQH2obGyk6sWQgs6dhJ5wABgPifSzRrXiPyPpM=,tag:jdB4n5skMrh+81OQWHMLGA==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXbzhhTDNINTJDc0thMkFV
-            UG1rVm9QZ0NxalRjL2ovZ2MwNjN4NysrbVNNCmFGYU9pUWdiMURWamZZRzhoUXpL
-            SFQ1ODE1YmFEcW03S1M2TWl6bE1VQjAKLS0tIEJRbUJtdy95K0N5WkJPQVFKWnNE
-            bGdOWCtDZzI5L0lEalhmQ2RxaUNBNmcKIOPJc6liVT7pA3Tu78CoPeTZJRgiGhMi
-            tTwQi7RrltOaGBYVqAW3O6840h5BVzibFb1fvDsICXV69QgyKGMAKw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBrdk8vTU1SemdJTmpnRnZw
+            Qyt3d1dIRGJkdFgyRlpoYmlLNEhyaU42MjNVCjBtOW80L0RqQUl2RktiSStxMGkz
+            aXRsZThkOW1yOURSZ3cwNUFMUGhLcXcKLS0tIFRWd09uY1FrUkxDTHo3K09zM0l2
+            cHhnZy9YUDYwbWdQb2R1Z0s4N210SVUK+QeiHy5J9X2RNxXbdHTa7Ol/LGv2mbOL
+            xRO+MKRFxK7LPbTi92wD4BZub1+uuJLT8SWk9xjVj7qDwIl18esaZQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T02:23:34Z"
-    mac: ENC[AES256_GCM,data:WZ1be/iDziD5qrT6W/Pf6HEOmk56xeQlU4e6wT/Jzem/XHShkA2j8R8nGPS4SgD6rg8qbfnFXMQh5gzmZq5bQkY/eWFs3A8jyTkKEOMg+Q0Jna1SLNnxMuqUjePIT6Aqw73j9EB6jR11aIM2s4iplUguYfRJKcUY479G7rL7eA0=,iv:BCQGRFXpalzWS32Ovm8d4bfbl5ECo4JyS4gXAVYPWC8=,tag:XUdcbQZLUPAyKO5C3Vrp/g==,type:str]
+    lastmodified: "2025-01-19T02:33:49Z"
+    mac: ENC[AES256_GCM,data:YOA48uF5ydC6jMNYbOgMLDUezu4LNVI5T/wQidwBiYnIgqJArfYEnKNGMmNpBE71Dq5p4tMg25jYcxwKohoy+yhScccyzABbn6qispVAqmzqyWYh4XCeHxU5Yt68NJ8NEf7RIgQ7SVEuM2n6vW2ROTCIT0gAKD10/kFePhlhp90=,iv:6HddTS19xOFAY1K6yPO3Vy0uJPqA+e/rZ1TDuZ5IXV0=,tag:+7gBcVdx2QHtr60FaucBuw==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.2
